Adjusting code to be mobile responsive

--- a/src/App.css
+++ b/src/App.css
@@ -17,15 +17,51 @@
     0 4px 8px -2px rgba(0, 0, 0, 0.12);
 }
 
-.door {
+/* .door {
   transition: margin 1s ease-in-out;
 }
 
 .door2.right {
   margin-left: 74.5%;
+} */
+
+/* On screens that are 992px or less, set the background color to blue */
+
+.jumbotron {
+  height: 45%;
+  margin:auto;
+}
+.door {
+  display: inline-block;
+  transition: all 1s ease-in-out;
+  position: relative;
+  top: 0;
+}
+
+.door1.left {
+  transform: translateX(calc(-100% - 10vw));
+}
+
+.door2.right {
+  transform: translateX(calc(100% + 10vw));
 }
 
 .beach {
+  position: absolute;
+  top: 2%;
+  height: 96%;
+  object-fit: cover;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
+}
+@media screen and (min-width: 1024px) {
+  .jumbotron {
+    height: 55%;
+  }
+}
+
+/* .beach {
   position: absolute;
   top: 2%;
   height: 27vw;
@@ -33,7 +69,7 @@
   opacity: 0;
   visibility: hidden;
   transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
-}
+} */
 
 .beach.open {
   opacity: 1;
@@ -43,7 +79,6 @@
 h1,
 h2 {
   -webkit-text-stroke: 2px #ff7bac;
-  
 }
 
 .explore-text {
@@ -65,8 +100,7 @@ h2 {
   position: absolute;
   left: 0;
   top: 0;
-  background-color: rgba(0, 0, 0, 0.7); 
-
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .close-video {
